samples/_failures_safe/1761729223_19b1be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_124833ab.c: In function ‘main’:
./samples/SAFE/__tmp_124833ab.c:171:38: error: missing terminating " character
  171 |     const char* operation_names[] = {"B
      |                                      ^~
./samples/SAFE/__tmp_124833ab.c:171:5: error: expected expression at end of input
  171 |     const char* operation_names[] = {"B
      |     ^~~~~
./samples/SAFE/__tmp_124833ab.c:171:5: error: expected declaration or statement at end of input
